hopefully fix tests for CI